Updated Cat.Codes techniques

--- a/HousePrice_Categorical_Variable.ipynb
+++ b/HousePrice_Categorical_Variable.ipynb
@@ -1548,38 +1548,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cast 'class' column as categorical\n",
+    "final_df['House Condition'] = final_df['House Condition'].astype('category')\n",
+    "\n",
+    "final_df['House Condition'] = final_df['House Condition'].cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>House Condition</th>\n",
+       "      <th>monroe township</th>\n",
+       "      <th>robinsville</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2600</td>\n",
+       "      <td>550000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3000</td>\n",
+       "      <td>565000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3200</td>\n",
+       "      <td>610000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3600</td>\n",
+       "      <td>680000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4000</td>\n",
+       "      <td>725000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2600</td>\n",
+       "      <td>585000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2800</td>\n",
+       "      <td>615000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3300</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3600</td>\n",
+       "      <td>710000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2600</td>\n",
+       "      <td>575000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2900</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>3100</td>\n",
+       "      <td>620000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3600</td>\n",
+       "      <td>695000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0     0\n",
-       "1     2\n",
-       "2     2\n",
-       "3     1\n",
-       "4     1\n",
-       "5     0\n",
-       "6     2\n",
-       "7     2\n",
-       "8     1\n",
-       "9     3\n",
-       "10    0\n",
-       "11    2\n",
-       "12    1\n",
-       "dtype: int8"
+       "    Area   Price  House Condition  monroe township  robinsville\n",
+       "0   2600  550000                0                1            0\n",
+       "1   3000  565000                2                1            0\n",
+       "2   3200  610000                2                1            0\n",
+       "3   3600  680000                1                1            0\n",
+       "4   4000  725000                1                1            0\n",
+       "5   2600  585000                0                0            0\n",
+       "6   2800  615000                2                0            0\n",
+       "7   3300  650000                2                0            0\n",
+       "8   3600  710000                1                0            0\n",
+       "9   2600  575000                3                0            1\n",
+       "10  2900  600000                0                0            1\n",
+       "11  3100  620000                2                0            1\n",
+       "12  3600  695000                1                0            1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Cast 'class' column as categorical\n",
-    "final_df['House Condition'] = final_df['House Condition'].astype('category')\n",
-    "\n",
-    "final_df['House Condition'].cat.codes"
+    "final_df"
    ]
   }
  ],
