Updated Cat.codes label encoding

--- a/HousePrice_Categorical_Variable.ipynb
+++ b/HousePrice_Categorical_Variable.ipynb
@@ -1542,7 +1542,8 @@
    "source": [
     "<h2 style='color:red'>Using Category(Cat.codes)</h2>\n",
     "\n",
-    "To use this we first need to convert categorical variable to category type.\n",
+    "1. To use this we first need to convert categorical variable to category type.\n",
+    "2. This is also considered as label encoding technique \n",
     "\n"
    ]
   },
